--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Telegram Clicker</title>
     <link rel="stylesheet" href="style.css">
+    <!-- Telegram SDK должен загружаться первым -->
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <!-- Firebase SDK v9+ (модульный подход через CDN) -->
-    <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore.js"></script>
+    <!-- Firebase SDK будет загружаться динамически в app.js для избежания CORS проблем -->
 </head>
 <body>
     <!-- Прелоадер -->
